2002-02-20  Ravi Pratap  <ravi@ximian.com>

	* expression.cs (Binary.ResolveOperator): Ensure that we are
	not trying to operate on a void type - this fixes the reported
	bug.

	* decl.cs (CheckMethodAgainstBase): Do not allow overriding if
	the parent implementation is sealed.

	* ../errors/cs0239.cs : Add.

	* attribute.cs (ApplyAttributes): Handle Modulebuilders too.

	* typemanager.cs (unverifiable_code_type): Corresponds to 
	System.Security.UnverifiableCodeAttribute. We need to emit this for modules
	which have unsafe code in them.

	* rootcontext.cs (EmitCode): Emit the above attribute when we are in an 
	unsafe context.

2002-02-19  Miguel de Icaza  <miguel@ximian.com>

	* cs-tokenizer.cs: Add support for @"litreal strings"

	Make tokenizer accept pre-processor directives
	on any column (remove the old C-like limitation). 

	* rootcontext.cs (EmitCode): Emit any global attributes.
	(AddGlobalAttributes): Used to keep track of assembly attributes. 

	* attribute.cs (ApplyAttributes): Support AssemblyAttributes.

	* cs-parser.jay: Add support for global attributes.  

2002-02-17  Miguel de Icaza  <miguel@ximian.com>

	* expression.cs (Indirection): New helper class.  Unary will
	create Indirection classes to be able to implement the
	IMemoryLocation interface on it.

2002-02-16  Miguel de Icaza  <miguel@ximian.com>

	* cs-parser.jay (fixed_statement): reference the right statement.

	* statement.cs (Fixed.Emit): Finish implementing the fixed
	statement for the &x case.

2002-02-14  Miguel de Icaza  <miguel@ximian.com>

	* class.cs (Property.Define, Method.Define): Remove newslot when
	`implementing'.  

	* modifiers.cs: My use of NewSlot when `Abstract' was set was
	wrong.  NewSlot should only be used if the `new' keyword is present.

	* driver.cs (GetSystemDir): Use CodeBase instead of FullName for
	locating our system dir.  Sorry about this.

2002-02-13  Miguel de Icaza  <miguel@ximian.com>

	* driver.cs (GetSystemDir): Compute correctly the location of our