@@ -1,3 +1,7 @@
+2002-02-20  Miguel de Icaza  <miguel@ximian.com>
+
+	* unsafe-1.cs: Extend test.
+
 2002-01-18  Miguel de Icaza  <miguel@ximian.com>
 
 	* test-7.cs: Fix test (i.i wsa invalid)
